--- a/html/css/style.css
+++ b/html/css/style.css
@@ -874,7 +874,7 @@ body .frame-shadow .frame-img{
 	.avater-btn img{
 		max-width:300px;
 	}
-/*  Footer 
+/*  Footer change.
 -------------------------------------- */
 #footer-wrap{
 	background:#fff;
