--- a/html/css/style.css
+++ b/html/css/style.css
@@ -18,6 +18,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
 ______________________*/
 body, input, select, textarea{
 	font-family:Arial, Helvetica, sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-family: 'Open Sans', sans-serif;
 	font-size:12px;
 	color:#000;
@@ -588,15 +589,25 @@ body .frame-shadow .frame-img{
 		padding:0 25px;
 	}
 .article-gallery{
-	padding:25px 0 50px;
+	padding:25px 0 20px;
 }
 	.article-gallery li{
 		float:left;
 		width:25%;
-		padding:0 15px 30px;
+		padding:0 15px 15px;
 		-moz-box-sizing:border-box;
 		-webkit-box-sizing:border-box;
 		box-sizing:border-box;
+	}
+	.field-channel{
+		background:#fff;
+		width:100%;
+		border:none;
+		padding:5px;
+		-moz-box-sizing:border-box;
+		-webkit-box-sizing:border-box;
+		box-sizing:border-box;
+		box-shadow:-3px 2px 0 rgba(0, 0, 0, 0.3);
 	}
 	.square{
 		display:block;
@@ -710,7 +721,9 @@ body .frame-shadow .frame-img{
 	}
 	.strip-black li a{
 		color:#d4ff8b;
+		color:#eee;
 		font-size:18px;
+		font-family: 'Montserrat', sans-serif;
 	}
 .footer-links{
 	padding:10px 0;
@@ -755,6 +768,8 @@ body .frame-shadow .frame-img{
 		padding:10px 50px 0;
 		font-size:28px;
 		position:relative;
+		font-weight:bold;
+		font-family: 'Montserrat', sans-serif;
 	}
 	.social-section{
 		text-align:center;
@@ -763,10 +778,28 @@ body .frame-shadow .frame-img{
 		margin:0 50px;
 	}
 		.social-section img{
-			max-width:250px;
+			max-width:300px;
 		}
 		.social-section p{
 			margin:0 0 15px;
+		}
+		.facebook,
+		.twitter{
+			background:url(../images/social-1.png) no-repeat;
+			width:275px;
+			height:58px;
+			line-height:55px;
+			padding-right:25px;
+			text-align:center;
+			color:#fff;
+			display:inline-block;
+			font-family: 'Montserrat', sans-serif;
+			font-weight:bold;
+			font-size:28px;
+		}
+		.twitter{
+			background:url(../images/social-2.png) no-repeat;
+			height:66px;
 		}
 .avater-wrap{
 	padding:50px 100px 0;
@@ -852,15 +885,18 @@ body .frame-shadow .frame-img{
 			width:25px;
 		}
 		.signup{
+			font-family: 'Montserrat', sans-serif;
 			background:url(../images/signup.png) no-repeat;
 			width:200px;
 			height:45px;
 			line-height:45px;
 			text-align:center;
+			font-size:20px;
+			color:#fff;
+			font-weight:bold;
 			border:none;
 			cursor:pointer;
 			padding:0;
-			font-size:0;
 		}
 .avater-gallery{
 	padding:45px 0 20px;
@@ -891,6 +927,22 @@ body .frame-shadow .frame-img{
 	}
 	.avater-btn img{
 		max-width:300px;
+	}
+	.cancel,
+	.ok{
+		font-family: 'Montserrat', sans-serif;
+		background:url(../images/cancel.png) no-repeat;
+		width:300px;
+		height:69px;
+		line-height:67px;
+		text-align:center;
+		display:inline-block;
+		font-size:29px;
+		color:#fff;
+		font-weight:bold;
+	}
+	.ok{
+		background:url(../images/ok.png) no-repeat;
 	}
 /*  Footer change.
 -------------------------------------- */
