--- a/html/css/style.css
+++ b/html/css/style.css
@@ -71,6 +71,7 @@ p{
 ______________________*/
 .content-width{
 	width:1200px;
+	width:1100px;
 	margin:0 auto;
 }
 
@@ -94,11 +95,9 @@ body{
 	z-index:99;
 }
 body .sidebar{
-	/*
 	position: fixed;
-	margin-right: -604px;
+	margin-right: -524px;
     right: 50%;
-	*/
 }
 
 /* Header
@@ -191,9 +190,6 @@ ______________________*/
 		}
 	.view-section{
 	}
-	.view-section:hover ul{
-		display:block;
-	}
 		.view-section ul{
 			display:none;
 			position:absolute;
@@ -251,7 +247,8 @@ ______________________*/
 }
 .buble-tertiary{
 	background:url(../images/buble-ex.png) no-repeat;
-	top:500px;
+	top:50%;
+	margin-top:-200px;
 	width:350px;
 	height:413px;
 	margin-left:-450px;
@@ -392,9 +389,14 @@ body .frame-shadow .frame-img{
 	height:802px;
 	position:relative;
 }
+.sidebar{
+	background-size:100% auto;
+	width:500px;
+	height:650px;
+}
 	.title{
-		height:50px;
-		padding:17px 25px 0;
+		height:46px;
+		padding:10px 25px 0;
 		color:#fff;
 		font-weight:bold;
 		font-size:18px;
@@ -405,8 +407,8 @@ body .frame-shadow .frame-img{
 			vertical-align:middle;
 		}
 .sidebar-inner{
-	padding:15px 20px 15px 22px;
-	height:550px;
+	padding:0 20px 15px 22px;
+	height:485px;
 	overflow-y:auto;
 	overflow-x:hidden;
 	margin:15px 20px 15px 0;
@@ -419,21 +421,21 @@ body .frame-shadow .frame-img{
 }
 	.msg-date{
 		float:left;
-		width:95px;
+		width:85px;
 		color:#6b6b6c;
 		font-size:16px;
 		padding:40px 0 0;
 	}
 	.msg-info-wrap{
-		margin-left:110px;
+		margin-left:88px;
 	}
 	.msg-info{
 		float:left;
-		width:355px;
+		width:273px;
 	}
 	.msg-user{
 		float:right;
-		width:65px;
+		width:50px;
 		box-shadow:0 3px 3px rgba(0,0,0, 0.6);
 		-moz-border-radius:50%;
 		-webkit-border-radius:50%;
@@ -485,7 +487,7 @@ body .frame-shadow .frame-img{
 }
 .message-left .msg-info{
 	float:right;
-	width:345px;
+	width:277px;
 }
 .message-left .msg-user{
 	margin-top:15px;
@@ -513,13 +515,13 @@ body .frame-shadow .frame-img{
 		border-radius:15px;
 	}
 .sidebar-bot{
-	height:70px;
-	padding:50px 45px 0 15px;
+	height:57px;
+	padding:1px 45px 0 15px;
 }
 	.field-comment{
 		height:50px;
 		line-height:50px;
-		padding:14px 0 0 60px;
+		padding:0 0 0 60px;
 		font-size:14px;
 		width:100%;
 		border:none;
@@ -583,7 +585,7 @@ body .frame-shadow .frame-img{
 		margin:0 0 40px;
 	}
 	.in-sm{
-		font-size:20px;
+		font-size:18px;
 		color:#58595b;
 		line-height:1.4;
 		padding:0 25px;
@@ -599,15 +601,11 @@ body .frame-shadow .frame-img{
 		-webkit-box-sizing:border-box;
 		box-sizing:border-box;
 	}
-	.field-channel{
-		background:#fff;
-		width:100%;
-		border:none;
-		padding:5px;
-		-moz-box-sizing:border-box;
-		-webkit-box-sizing:border-box;
-		box-sizing:border-box;
-		box-shadow:-3px 2px 0 rgba(0, 0, 0, 0.3);
+	.channel-lable{
+		text-align:center;
+		display:block;
+		font-size:16px;
+		color:#58595b;
 	}
 	.square{
 		display:block;
@@ -637,7 +635,7 @@ body .frame-shadow .frame-img{
 			background:#27a5dc;
 		}
 .join-art{
-	font-size:24px;
+	font-size:20px;
 	color:#58595b;
 	text-align:center;
 }
@@ -985,7 +983,7 @@ body .frame-shadow .frame-img{
 }
 body .sidebar{
 	width:500px;
-	/*margin-right:-532px;*/
+	margin-right:-532px;
 }
 	.msg-info{
 		width:235px;
