--- a/html/css/style.css
+++ b/html/css/style.css
@@ -14,6 +14,19 @@ table{border-collapse:collapse;border-spacing:0}
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
 
 
+@font-face {
+    font-family: 'dotnessmedium';
+    src: url('../webfonts/dotness-webfont.eot');
+    src: url('../webfonts/dotness-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../webfonts/dotness-webfont.woff2') format('woff2'),
+         url('../webfonts/dotness-webfont.woff') format('woff'),
+         url('../webfonts/dotness-webfont.ttf') format('truetype'),
+         url('../webfonts/dotness-webfont.svg#dotnessmedium') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 /* Default Font Styles
 ______________________*/
 body, input, select, textarea{
@@ -376,11 +389,14 @@ body .frame-shadow .frame-img{
 		width:100%;
 		height:304px;
 	}
-	.arrow{
+	.arrow-wrap{
 		position:absolute;
 		right:-24px;
 		top:80px;
 	}
+		.arrow-up{
+			display:none;
+		}
 /* sidebar start  */
 .sidebar{
 	float:right;
@@ -559,8 +575,8 @@ body .frame-shadow .frame-img{
 	.landing-desc{
 		text-align:center;
 		color:#fff;
-		font-size:40px;
-		padding:250px 0 150px;
+		font-size:32px;
+		padding:200px 0 150px;
 		text-shadow:3px 3px 3px rgba(0,0,0, 0.4);
 	}
 	.block{
@@ -692,7 +708,7 @@ body .frame-shadow .frame-img{
 	text-align:center;
 }
 	.strip-black{
-		padding:10px 15px;
+		padding:12px 15px 10px;
 	}
 	.more-tag{
 		position:absolute;
@@ -718,10 +734,10 @@ body .frame-shadow .frame-img{
 		margin:0 15px;
 	}
 	.strip-black li a{
-		color:#d4ff8b;
-		color:#eee;
-		font-size:18px;
-		font-family: 'Montserrat', sans-serif;
+		color:#D4FF8B;
+		font-size:20px;
+		font-family: 'dotnessmedium';
+		text-transform:uppercase;
 	}
 .footer-links{
 	padding:10px 0;
@@ -769,9 +785,17 @@ body .frame-shadow .frame-img{
 		font-weight:bold;
 		font-family: 'Montserrat', sans-serif;
 	}
+		.cancel-logo{
+			position:absolute;
+			right:20px;
+			top:17px;
+		}
+			.cancel-logo img{
+				max-width:20px;
+			}
 	.social-section{
 		text-align:center;
-		padding:40px 0 20px;
+		padding:20px 0 15px;
 		border-bottom:4px dashed #9e9e9e;
 		margin:0 50px;
 	}
@@ -800,7 +824,7 @@ body .frame-shadow .frame-img{
 			height:66px;
 		}
 .avater-wrap{
-	padding:50px 100px 0;
+	padding:20px 100px 0;
 }
 	.avater-section{
 		float:left;
@@ -808,6 +832,7 @@ body .frame-shadow .frame-img{
 		text-align:center;
 		color:#9e9e9e;
 		font-size:20px;
+		margin:25px 0 0;
 	}
 		.avater-section a{
 			color:#9e9e9e;
@@ -862,18 +887,21 @@ body .frame-shadow .frame-img{
 		position:relative;
 	}
 		.form-contain .field-form{
-			border:none;
-			border-bottom:1px solid #9e9e9e;
+			border:1px solid #999;
 			width:100%;
 			padding:10px 35px 10px 10px;
 			font-size:16px;
-			background:none;
+			background:#fff;
+			color:#968589;
+			-moz-box-shadow:-6px 8px 0 rgba(0, 0, 0, 0.3);
+			-webkit-box-shadow:-6px 8px 0 rgba(0, 0, 0, 0.3);
+			box-shadow:-6px 8px 0 rgba(0, 0, 0, 0.3);
 			-moz-box-sizing:border-box;
 			-webkit-box-sizing:border-box;
 			box-sizing:border-box;
 		}
 		.form-contain .field-password{
-			background:url(../images/icon-3.png) right center no-repeat;
+			background:#fff url(../images/icon-3.png) 228px center no-repeat;
 			background-size:25px auto;
 		}
 		.field-icon{
@@ -1116,8 +1144,8 @@ body .sidebar{
 			padding-left:0;
 		}
 .landing-desc{
-	font-size:20px;
-	padding:50px 0;
+	font-size:18px;
+	padding:20px 0 10px;
 }
 	.btn-section img{
 		max-width:180px;
@@ -1136,6 +1164,18 @@ body .sidebar{
 }
 .turn{
 	display:none;
+}
+.arrow-right{
+	display:none;
+}
+.arrow-wrap {
+    left: 50%;
+    margin-left: -15px;
+    right: -24px;
+    top: -39px;
+}
+.arrow-up{
+	display:block;
 }
 #footer-wrap img{
 	max-width:300px;
